--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Calvin</title>
+    <title>Andre Zhang - Thinking out of the box</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -61,19 +61,6 @@
                 <ul class="s-header__nav">
                     <li class="current"><a href="index.html" title="">Home</a></li>
                     <li class="has-children">
-                        <a href="#0" title="">Categories</a>
-                        <ul class="sub-menu">
-                            <li><a href="category.html">Design</a></li>
-                            <li><a href="category.html">Lifestyle</a></li>
-                            <li><a href="category.html">Photography</a></li>
-                            <li><a href="category.html">Vacation</a></li>
-                            <li><a href="category.html">Work</a></li>
-                            <li><a href="category.html">Health</a></li>
-                            <li><a href="category.html">Family</a></li>
-                            <li><a href="category.html">Relationship</a></li>
-                        </ul>
-                    </li>
-                    <li class="has-children">
                         <a href="#0" title="">Blog</a>
                         <ul class="sub-menu">
                             <li><a href="single-video.html">Video Post</a></li>
@@ -81,7 +68,7 @@
                             <li><a href="single-standard.html">Standard Post</a></li>
                         </ul>
                     </li>
-                    <li><a href="styles.html" title="">Styles</a></li>
+                    <li><a href="cv.html" title="">CV</a></li>
                     <li><a href="about.html" title="">About</a></li>
                     <li><a href="contact.html" title="">Contact</a></li>
                 </ul> <!-- end s-header__nav -->
@@ -134,20 +121,10 @@
                 <div class="row s-hero__slide-content animate-this">
                     <div class="column">
                         <div class="s-hero__slide-meta">
-                            <span class="cat-links">
-                                <a href="#0">Lifestyle</a>
-                                <a href="#0">Design</a>
-                            </span>
-                            <span class="byline"> 
-                                Posted by 
-                                <span class="author">
-                                    <a href="#0">Jonathan Doe</a>
-                                </span>
-                            </span>
                         </div>
                         <h1 class="s-hero__slide-text">
                             <a href="#0">
-                                Tips and Ideas to Help You Start Freelancing.
+                                Aime-moi moins, mais aime-moi longtemps.
                             </a>
                         </h1>
                     </div>
